tests/fixtures/invalid/pow_bytes_str_bool.py
# Cannot call pow() with Bytes, Str, Bool
x = pow(b"hello", "hello", True)
